<resources>
    <string name="app_name">Rhythm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="password_txt">Password</string>
    <string name="search_txt">Search</string>
    <string name="username">UserName</string>
    <string name="view_profile">view profile</string>
    <string name="item">item</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="dd_mm_yyyy">DD/MM/yyyy</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_acoount">Already Have an Acoount?</string>
    <string name="sign_in">Sign in</string>

    <string name="facebook_app_id">972504030410642</string>
    <string name="fb_login_protocol_scheme">fb972504030410642</string>
    <string name="facebook_client_token">9c5b8fb3e595e31c0d7c414abdda5cd8</string>
    <string name="likes">Likes</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="song_name">Song name</string>
    <string name="now_playing">Now Playing</string>
    <string name="for_you">For You</string>
    <string name="welcome_txt">Welcome</string>
    <string name="all_txt">All</string>
    <string name="new_txt">New</string>
    <string name="popular">Popular</string>
    <string name="charts">Charts</string>
    <string name="favourites">Favourites</string>
    <string name="new_releases">New Releases</string>
    <string name="create_music">Create Music</string>
    <string name="select_the_type_of_music_to_create">Select The Type of Music To Create</string>
    <string name="back">Back</string>
    <string name="the_generated_music_for_you">The Generated Music For You</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="your_playlists">Your PlayLists</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="based_on_your_likes">Based On Your Likes</string>
    <string name="specially_for_you">Specially For You</string>


</resources>