<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_auth"
    tools:context=".ui.authentication.SignUpFragment">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_110sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_25sdp"
                android:src="@drawable/sgin_up_logo"

                />





        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"

            android:hint="@string/email_address"
            android:textColorHint="@color/hint_txt_color"
            app:boxCornerRadiusBottomEnd="@dimen/_25sdp"
            app:boxCornerRadiusBottomStart="@dimen/_25sdp"
            app:boxCornerRadiusTopEnd="@dimen/_25sdp"
            app:boxCornerRadiusTopStart="@dimen/_25sdp"
            app:boxStrokeColor="@color/background_auth"
            app:boxStrokeWidth="@dimen/_1sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_txt"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#221e1d"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/full_name"
            android:textColorHint="@color/hint_txt_color"
            app:boxCornerRadiusBottomEnd="@dimen/_25sdp"
            app:boxCornerRadiusBottomStart="@dimen/_25sdp"
            app:boxCornerRadiusTopEnd="@dimen/_25sdp"
            app:boxCornerRadiusTopStart="@dimen/_25sdp"
            app:boxStrokeColor="@color/background_auth"
            app:boxStrokeWidth="@dimen/_1sdp"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#221e1d"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/password_txt"
            android:textColorHint="@color/hint_txt_color"
            app:boxCornerRadiusBottomEnd="@dimen/_25sdp"
            app:boxCornerRadiusBottomStart="@dimen/_25sdp"
            app:boxCornerRadiusTopEnd="@dimen/_25sdp"
            app:boxCornerRadiusTopStart="@dimen/_25sdp"
            app:boxStrokeColor="@color/background_auth"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:passwordToggleEnabled="true"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#221e1d"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/date_of_birth"
                android:textColor="@color/txt_color_auth"
                android:textSize="@dimen/_18sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/dd_mm_yyyy"
                android:textColorHint="@color/hint_txt_color"
                app:boxCornerRadiusBottomEnd="@dimen/_25sdp"
                app:boxCornerRadiusBottomStart="@dimen/_25sdp"
                app:boxCornerRadiusTopEnd="@dimen/_25sdp"
                app:boxCornerRadiusTopStart="@dimen/_25sdp"
                app:boxStrokeColor="@color/background_auth"
                app:boxStrokeWidth="@dimen/_1sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:backgroundTint="#221e1d"
                    android:digits="0123456789/"
                    android:inputType="date"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/male"
                android:textColor="@color/txt_color_auth"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:text="@string/female"
                android:textColor="@color/txt_color_auth"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/buttonshape"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_acoount"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/txt_color_auth"/>
            <TextView
                android:id="@+id/sign_in_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/txt_color_auth"/>

        </LinearLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"


            />
    </LinearLayout>


</ScrollView>