<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.homePage.generation.PlayGeneratedMusicFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_generated_music_for_you"
        android:textSize="@dimen/_18ssp"
        android:layout_margin="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="@dimen/_40sdp"
        android:backgroundTint="@color/listen_generated_space"
        >
<!--<ImageButton
    android:id="@+id/play_pause_btn"
    android:layout_width="@dimen/_60sdp"
    android:layout_height="@dimen/_60sdp"
    android:src="@drawable/play_arrow"
    android:layout_gravity="center"/>-->

        <RelativeLayout
            android:id="@+id/seek_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            >

            <ImageButton
                android:id="@+id/play_pause_btn"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/play_arrow" />

            <TextView
                android:id="@+id/duration_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_below="@id/play_pause_btn"
                android:text="1:28"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/duration_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:text="2:05"
                android:layout_below="@id/play_pause_btn"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/play_pause_btn"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"

                android:progressTint="@color/white"
                android:thumbTint="@color/white" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_18ssp"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_18ssp"
                android:backgroundTint="#393434"/>


        </RelativeLayout>



    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>